[gd_scene load_steps=4 format=3 uid="uid://cniqe3vp0q66e"]

[ext_resource type="Theme" uid="uid://rc4laadkqcrj" path="res://themes/mainmenu.tres" id="1_aylgi"]
[ext_resource type="Script" uid="uid://do302ej7pxqft" path="res://scripts/preferencetab.gd" id="2_s6q3q"]
[ext_resource type="Texture2D" uid="uid://teptcs3oxibx" path="res://images/menu/keys.png" id="3_s6q3q"]

[node name="preferencetab" type="Control"]
layout_mode = 3
anchor_right = 0.037
anchor_bottom = 0.15900001
offset_left = 530.0
offset_top = 588.0
offset_right = 1365.96
offset_bottom = 831.27997
theme = ExtResource("1_aylgi")
script = ExtResource("2_s6q3q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Keys" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_s6q3q")
stretch_mode = 3

[node name="Master" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "Master"
fit_content = true

[node name="mast" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SFX" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "SFX"
fit_content = true

[node name="sfx" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Music" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "Music"
fit_content = true

[node name="mus" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[connection signal="value_changed" from="VBoxContainer/mast" to="." method="_on_mast_value_changed"]
[connection signal="value_changed" from="VBoxContainer/sfx" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="VBoxContainer/mus" to="." method="_on_mus_value_changed"]
